fixed update banner z-index

--- a/src/common/components/UpdateBanner.scss
+++ b/src/common/components/UpdateBanner.scss
@@ -15,4 +15,5 @@
 	background-color: #FFF599;
 	border: 1px solid gold;
 	border-radius: 3px;
+	z-index: 1;
 }
